fix header on tablet 768px

--- a/app/sass/pages/_main.sass
+++ b/app/sass/pages/_main.sass
@@ -306,8 +306,6 @@ button
     &__box
       height: 100vh
       min-height: 768px
-    &__content
-      height: 100%    
 .intro
   display: flex  
   flex-direction: column  
@@ -433,6 +431,9 @@ button
       font: 400 24px/24px $main-font
       margin-bottom: 25px       
 +r(992)
+  .header
+    &__content
+      height: 100%    
   .h-content
     &__subtitle
       text-align: left  
